Commented out the background image, Fixed issues with z-index disagreements between elements.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -175,7 +175,7 @@ header {
   position: fixed;
   left: -100vw;
   transition: all 0.3s ease-in-out;
-  z-index: 1;
+  z-index: 2;
 }
 
 .shown {
@@ -188,7 +188,7 @@ header {
 
 .menu-btn {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -252,6 +252,7 @@ main {
   margin: 10vh 5vw 0 5vw;
   padding-bottom: 2.5rem; /* for footer */
   position: relative;
+  z-index: -1;
 }
 
 main>div {
